Fix spacing in nav bar in header

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 .header__nav {
   list-style-type: none;
   display: flex;
-  gap: 20px;
+  gap: 25px;
 }
 
 .header-container {
